--- a/app.css
+++ b/app.css
@@ -249,3 +249,489 @@ footer section div.contact-me div.contact-links a i{
     color: black;
     font-size: 2rem;
 }
+
+@media only screen and (max-width:500px){
+
+    main.container-main section.header-container{
+        
+        max-width: 100%;
+        max-height: 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 15rem;
+        background: linear-gradient(170deg, aqua 60%, white 60%);    
+    }
+    main.container-main div.header{
+        width: 95%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        position: relative;  
+    }
+    main.container-main div.header div.profile{
+       
+        align-content: center;
+        /* max-width: 10rem; */
+        max-width:80%;
+        max-height: 60%;
+        background-image: url(./images/pexels-cottonbro-studio-3206078.jpg);
+        background-size: 100% 100%;
+        background-position: center;
+        position: relative;
+        z-index: 1;
+        left: 2%;
+    }
+    main.container-main div.header div.profile h1{
+        margin-top: 100px; 
+        align-content: center;
+        position: absolute;
+        bottom: max(0);
+        left:max(60px);
+        text-align: center;
+        align-self: center;
+        width: max(100%);
+        color: white;
+        max-width: 200px;
+    }
+
+    main.container-main div.header section.about-me{
+    display: flex;
+    justify-content: flex-end;
+    align-items:center;
+    flex-direction: column-reverse;
+    max-width: 10rem;
+    max-height: 15rem;
+    background-color: white;
+    padding: 2rem;
+    border-radius: 5px;
+    box-shadow: 1.5px 1.5px rgb(255, 255, 255);
+    position: relative;
+    z-index: 0; 
+    } 
+    main.container-main div.header section.about-me h1{
+        font-size: 30px;
+        text-align: center;
+        position: absolute;
+        
+    }
+    main.container-main div.header section.about-me p{
+        margin-top: 50px;
+        max-width: 400px;
+        text-align:center;
+        font-size: 1rem;
+        position: absolute;
+        top:30%;  
+    }
+    main.container-main div.header section.about-me div.links{
+        max-width: 70rem;
+        display: flex;
+        position: absolute;
+        justify-content: flex-end;
+        bottom: max(-40%);
+        right: max(35%);   
+    }
+    main.container-main div.header section.about-me div.links a{
+        font-size: 2rem;
+        color: black;
+    }
+    main.container-main section.my-work{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        margin-left: 8%;    
+    }
+    main.container-main section.my-work h1{
+        max-width: 50%;
+        max-height: 70%;
+        margin-left:10%;
+        margin-top:max(170%);
+        position:relative;   
+    }
+    main.container-main section.my-work div.projects-container{
+        width: 100%;
+        height: 50rem;
+        display: grid;
+        grid-template-columns: repeat(1, 90%);
+        gap: 3rem;
+        column-gap: 1.5%;
+        margin-top:100px;  
+    }
+    main.container-main section.my-work div.projects-container div.project{
+        max-width: 100%;
+        max-height: 20rem;
+        box-shadow: 2px 2px 2px 2px gray;   
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image1{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project1.jpg);   
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image2{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project2.jpg);    
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image3{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project3.jpg);   
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image4{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project4.jpg);    
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image5{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project5.jpg);    
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image6{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project6.jpg);    
+    }
+    main.container-main section.my-work div.projects-container div.project div.details{
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;    
+    }
+    main.container-main section.my-work div.projects-container div.project div.details div.project-name-links{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 90%;
+        height: 3rem;   
+    }
+    main.container-main section.my-work div.projects-container div.project div.details div.project-name-links h1{
+        height: 1rem;
+        margin-left:20px;
+        margin-bottom:170%;   
+    }
+    main.container-main section.my-work div.projects-container div.project div.details div.project-name-links div.project-links{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-right:20px;  
+    }
+    main.container-main section.my-work div.projects-container div.project div.details div.project-name-links div.project-links a{
+        font-size: 0.8rem;
+        color: black;
+    }
+    main.container-main section.my-work div.projects-container div.project div.details p{
+        /* width: 90%; */
+        font-size: 17px;
+        text-align: justify;
+    }
+    footer{
+        width: 100%;
+        height:45rem;
+    }
+    footer section{
+        width: 100%;
+        flex-direction: column;
+    }
+    footer section div.contact-image{
+         width: 100%;
+        height: 80%; 
+        background-image: url(./images/pexels-cottonbro-studio-3206149.jpg);
+        background-size: 100% 100%;
+        background-position: center;
+    }
+    footer section div.contact-me{
+        max-width: 10rem;
+        max-height: 20rem;
+    }
+    footer section div.contact-me div.contact div.phone{
+        display: flex;
+        align-items: center;
+    }
+    footer section div.contact-me div.contact div.phone i{
+        color: white;
+        font-size: 45px;
+    }
+    footer section div.contact-me div.contact div.email{
+        display: flex;
+        align-items: center;
+    }
+    footer section div.contact-me div.contact div.email i{
+       color: white;
+        font-size: 45px;
+    }
+    footer section div.contact-me h1{
+        color: white;
+        font-size: 45px;
+    }
+    footer section div.contact-me p{
+        color: white;
+        font-size: 30px;
+       
+    }
+    footer section div.contact-me div.contact-links a i{
+        color: black;
+        font-size: 2rem;
+    }
+  
+} 
+
+@media only screen and ( min-width:500px) and (max-width:1000px){
+    main.container-main{
+        width: 100%;
+        height:auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;  
+        overflow-x: hidden; 
+    }
+    main.container-main section.header-container{
+        width: 100%;
+        height: 25rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 0rem;
+        background: linear-gradient(170deg, aqua 60%, white 60%);     
+    }
+    main.container-main div.header{
+        width: 95%;
+        justify-content: center;
+        align-items: center;
+        position: relative; 
+    }
+    main.container-main div.header div.profile{
+        width: 100%;
+        height: 100%;
+        background-image: url(./images/pexels-cottonbro-studio-3206078.jpg);
+        background-size: 100% 100%;
+        background-position: center;
+        position: relative;
+        z-index: 2;
+        left: 2%;
+        float:left;
+    }
+    main.container-main div.header div.profile h1{
+        position: relative;
+        bottom: 15%;
+        right: -50%;
+        text-align:right;
+        width: 100%;
+        color: white;
+        font-size: 35px;
+    }
+    main.container-main div.header section.about-me{
+        width: 25rem;
+        height: 20rem;
+        background-color: white;
+        display:flex;
+        justify-content:left;
+        align-items: left;
+        flex-direction: column;
+        padding:0rem;
+        border-radius: 5px;
+        box-shadow: 1.5px 1.5px gray;
+        position: relative;
+        z-index: 0;
+        top:15%;
+    }
+    main.container-main div.header section.about-me h1{
+        font-size: 45px;
+        text-align: center;
+        position:relative;
+        top:-7%; 
+    }
+    main.container-main div.header section.about-me p{ 
+       width: 75%;
+       font-size: 1rem;
+       position: relative; 
+        top:-20%; 
+        margin-left:10%;
+        margin-right: 0%;
+        text-align: left;
+       /*  text-align-last: left;
+          overflow: hidden;  */
+     }
+    main.container-main div.header section.about-me div.links{
+        width: 0rem;
+        display: flex;
+        position: relative;
+        justify-content: flex-end;
+        bottom: 0%;
+        right: 0%;
+    }
+    main.container-main div.header section.about-me div.links a{
+        display:none;
+        font-size: 3rem;
+        color: black;
+    }
+    main.container-main section.my-work{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        margin-left: 4%;
+        margin-top: 6%;
+        
+          
+    }
+    main.container-main section.my-work h1{
+        width: 100%;
+        height: 1rem;
+          
+    }
+    main.container-main section.my-work div.projects-container{
+        width: 100%;
+        height: 70rem;
+        display: grid;
+        grid-template-columns: repeat(2, 45%);
+        gap: 1rem;
+        column-gap: 1.5%;
+    
+          
+    }
+    main.container-main section.my-work div.projects-container div.project{
+        width: 100%;
+        height: 20rem;
+        box-shadow: 2px 2px 2px 2px gray;
+        
+          
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image1{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project1.jpg);
+          
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image2{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project2.jpg);
+          
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image3{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project3.jpg);
+          
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image4{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project4.jpg);
+          
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image5{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project5.jpg);
+          
+    }
+    main.container-main section.my-work div.projects-container div.project div.project-image6{
+        width: 100%;
+        height: 50%;
+        background-image: url(./images/project6.jpg);
+          
+    }
+    main.container-main section.my-work div.projects-container div.project div.details{
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+          
+    }
+    main.container-main section.my-work div.projects-container div.project div.details div.project-name-links{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 90%;
+        height: 3rem;
+          
+    }
+    main.container-main section.my-work div.projects-container div.project div.details div.project-name-links h1{
+        height: 1rem;
+          
+    }
+    main.container-main section.my-work div.projects-container div.project div.details div.project-name-links div.project-links{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+          
+    }
+    main.container-main section.my-work div.projects-container div.project div.details div.project-name-links div.project-links a{
+        font-size: 0.8rem;
+        color: black;
+    }
+    main.container-main section.my-work div.projects-container div.project div.details p{
+        width: 90%;
+        font-size: 12px;
+        text-align: justify;
+    }
+    footer{
+        background-color: aqua;
+        width: 100%;
+        height: 25rem;
+        display: flex;
+        justify-content:space-evenly;
+    }
+    footer section{
+        width: 90%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    footer section div.contact-image{
+        width: 35rem;
+        height: 20rem;
+        background-image: url(./images/pexels-cottonbro-studio-3206149.jpg);
+        background-size: 100% 100%;
+        background-position: center;
+    }
+    footer section div.contact-me{
+        width: 100%;
+        height: 100%;
+        margin-top: 1rem;
+    }
+    footer section div.contact-me div.contact div.phone{
+        display: flex;
+        align-items: center;
+    }
+    footer section div.contact-me div.contact div.phone i{
+        color: white;
+        font-size: 45px;
+    }
+    footer section div.contact-me div.contact div.email{
+        display: flex;
+        align-items: center;
+    }
+    footer section div.contact-me div.contact div.email i{
+       color: white;
+        font-size: 45px;
+    }
+    footer section div.contact-me h1{
+        color: white;
+        font-size: 45px;
+    }
+    footer section div.contact-me p{
+        color: white;
+        font-size: 30px;
+    }
+    footer section div.contact-me div.contact-links a i{
+        color: black;
+        font-size: 2rem;
+    }
+}
